--- a/src/main/webapp/app/profile/profile.component.scss
+++ b/src/main/webapp/app/profile/profile.component.scss
@@ -7,9 +7,24 @@ input.hidden {
   margin: auto;
 }
 
+.padding10 {
+  padding: 10px;
+}
+
+.right {
+  position: absolute;
+  right: 140px;
+}
+
+.btn-group {
+  display: block;
+  margin: auto;
+  padding-top: 30px;
+  width: 60%;
+}
+
 #profile-image1 {
   cursor: pointer;
-
   width: 100px;
   height: 100px;
   border: 2px solid #03b1ce;
@@ -21,6 +36,13 @@ input.hidden {
 .bot-border {
   border-bottom: 1px #f8f8f8 solid;
   margin: 5px 0 5px 0;
+}
+
+.list-group {
+  max-height: 200px;
+  margin-bottom: 10px;
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 .profile-window {
