--- a/src/main/webapp/app/music/music.component.html
+++ b/src/main/webapp/app/music/music.component.html
@@ -2,16 +2,22 @@
     <div class="row">
         <h2 class="col-md-6 center" *ngSwitchCase="true">
             <span id="likedFiles-page-heading">Liked audio files</span>
-            <button class="btn btn-primary float-right" (click)="loadUserFiles()">
+            <button class="btn btn-primary" (click)="loadUserFiles()">
                 <fa-icon [icon]="'music'"></fa-icon>
                 <span>Show my audio files</span>
             </button>
+            <button type="button" class="btn btn-secondary float-right" (click)="previousState()">
+                <fa-icon [icon]="'arrow-left'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.back">Back</span>
+            </button>
         </h2>
         <h2 class="col-md-6 center" *ngSwitchCase="false">
-            <span id="myFiles-page-heading">My audio files</span>
-            <button class="btn btn-primary float-right" (click)="loadLikedFiles()">
+            <span id="myFiles-page-heading">{{whoseFiles}}</span>
+            <button class="btn btn-primary" (click)="loadLikedFiles()">
                 <fa-icon [icon]="'music'"></fa-icon>
                 <span>Show liked audio files</span>
+            </button>
+            <button type="button" class="btn btn-secondary float-right" (click)="previousState()">
+                <fa-icon [icon]="'arrow-left'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.back">Back</span>
             </button>
         </h2>
     </div>
@@ -51,17 +57,19 @@
             <tbody>
             <tr *ngFor="let audioFile of audioFiles ;trackBy: trackId">
                 <td>{{audioFile.title}}</td>
-                <td class="narrow-hide"><a [routerLink]="['/', audioFile.post.user.login, 'view']">{{audioFile.post.user.login}}</a></td>
+                <td class="narrow-hide"><a
+                    [routerLink]="['/', audioFile.post.user.login, 'view']">{{audioFile.post.user.login}}</a></td>
                 <td class="narrow-hide">
                     <button type="submit"
                             [routerLink]="['/post', audioFile.post?.id, 'view' ]"
                             class="btn btn-info btn-sm">
                         <fa-icon [icon]="'eye'"></fa-icon>
-                        <span class="d-none d-md-inline" >View post</span>
+                        <span class="d-none d-md-inline">View post</span>
                     </button>
                 </td>
                 <td class="narrow-hide">
-                    <span>{{audioFile.users.length}} <fa-icon [icon]="'star'"></fa-icon></span>
+                    <span>{{audioFile.users.length}}
+                        <fa-icon [icon]="'star'"></fa-icon></span>
                 </td>
                 <td class="text-right">
                     <div class="btn-group">
