--- a/src/main/webapp/app/profile/profile.component.html
+++ b/src/main/webapp/app/profile/profile.component.html
@@ -1,6 +1,6 @@
 <div class="row justify-content-center">
     <div class="container">
-        <div class="col-md-8 profile-window">
+        <div class="col-md-8 profile-window" *ngIf="user">
             <div class="row col-md-12">
                 <div class="row col-md-8 center">
                     <img [src]="avatar"
@@ -121,234 +121,17 @@
                     </div>
                 </div>
                 <div class="row" *ngIf="showPosts">
-                    <div class="table-responsive" *ngIf="userPosts?.length > 0">
-                        <table class="table table-striped" aria-describedby="page-heading">
-                            <thead>
-                            <tr>
-                                <th scope="col"><span jhiTranslate="global.field.id">ID</span></th>
-                                <th scope="col"><span jhiTranslate="soundgramApp.post.postContent">Post Content</span></th>
-                                <th scope="col"><span jhiTranslate="soundgramApp.post.date">Date</span></th>
-                                <th scope="col"><span jhiTranslate="soundgramApp.post.user">User</span></th>
-                                <th scope="col"></th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr *ngFor="let post of userPosts">
-                                <td><a [routerLink]="['/post', post.id, 'view' ]">{{post.id}}</a></td>
-                                <td>{{post.postContent}}</td>
-                                <td>{{post.date | date:'medium'}}</td>
-                                <td>
-                                    <a [routerLink]="['/', post.user?.login, 'view']">{{post.user?.login}}</a>
-                                </td>
-                                <td class="text-right">
-                                    <div class="btn-group">
-                                        <button type="submit"
-                                                [routerLink]="['/post', post.id, 'view' ]"
-                                                class="btn btn-info btn-sm">
-                                            <fa-icon [icon]="'eye'"></fa-icon>
-                                            <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
-                                        </button>
-                                        <button type="submit"
-                                                [routerLink]="['/post', post.id, 'edit']"
-                                                class="btn btn-primary btn-sm">
-                                            <fa-icon [icon]="'pencil-alt'"></fa-icon>
-                                            <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
-                                        </button>
-                                        <button type="submit" (click)="delete(post)"
-                                                class="btn btn-danger btn-sm">
-                                            <fa-icon [icon]="'times'"></fa-icon>
-                                            <span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Delete</span>
-                                        </button>
-                                    </div>
-                                </td>
-                            </tr>
-                            </tbody>
-                        </table>
+                    <div *ngIf="userPosts.length > 0">
+                        <div>
+                            <jhi-post-object *ngFor="let post of userPosts"
+                                             [post]="post"
+                            >
+                            </jhi-post-object>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-</div>
-
-<!--<h4>Add tags to your profile</h4>
-
-<form name="form" role="form" (ngSubmit)="addTagToProfile()" [formGroup]="tagForm" *ngIf="!success">
-    <div class="form-group">
-        <div class="input-group w-100 mt-3">
-            <input type="text" class="form-control" id="tagName" name="tagName" formControlName="tagName"
-                  placeholder="{{ 'Add tag to your profile' }}">
-            <button type="submit" [disabled]="tagForm.invalid" class="btn btn-primary">Assign tag to your profile</button>
-        </div>
-        <div *ngIf="tagForm.get('tagName').invalid && (tagForm.get('tagName').dirty || tagForm.get('tagName').touched)">
-            <small class="form-text text-danger" *ngIf="tagForm.get('tagName').errors.required">
-                Tag name is required.
-            </small>
-            <small class="form-text text-danger" *ngIf="tagForm.get('tagName').errors.minlength">
-                Tag is required to be at least 1 character.
-            </small>
-            <small class="form-text text-danger" *ngIf="tagForm.get('tagName').errors.maxlength">
-                Tag cannot be longer than 50 characters.
-            </small>
-            <small class="form-text text-danger" *ngIf="tagForm.get('tagName').errors.pattern">
-                Tag can only contain letters and digits.
-            </small>
-        </div>
-    </div>
-   &lt;!&ndash; <button type="submit" [disabled]="tagForm.invalid" class="btn btn-primary">Assign tag to your profile</button>&ndash;&gt;
-</form>-->
-
-<!--<h3>User tags:</h3>
-<p></p>
-
-<div class="table-responsive" *ngIf="userTags?.length > 0">
-    <table class="table table-striped" aria-describedby="page-heading">
-        <thead>
-        <tr>
-            <th scope="col"><span jhiTranslate="global.field.id">ID</span></th>
-            <th scope="col"><span jhiTranslate="soundgramApp.tag.name">Name</span></th>
-            <th scope="col"><span jhiTranslate="soundgramApp.tag.user">User</span></th>
-            <th scope="col"></th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr *ngFor="let tag of userTags">
-            <td><a [routerLink]="['/tag', tag.id, 'view' ]">{{tag.id}}</a></td>
-            <td>{{tag.name}}</td>
-            <td>
-                    <span *ngFor="let user of tag.users; let last = last">
-                            <a [routerLink]="['/', user.login, 'view']">{{user.login}}{{last ? '' : ', '}}</a>
-                        </span>
-            </td>
-            <td class="text-right">
-                <div class="btn-group">
-                    &lt;!&ndash;                    <button type="submit"&ndash;&gt;
-                    &lt;!&ndash;                            [routerLink]="['/tag', tag.id, 'view' ]"&ndash;&gt;
-                    &lt;!&ndash;                            class="btn btn-info btn-sm">&ndash;&gt;
-                    &lt;!&ndash;                        <fa-icon [icon]="'eye'"></fa-icon>&ndash;&gt;
-                    &lt;!&ndash;                        <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>&ndash;&gt;
-                    &lt;!&ndash;                    </button>&ndash;&gt;
-                    &lt;!&ndash;                    <button type="submit"&ndash;&gt;
-                    &lt;!&ndash;                            [routerLink]="['/tag', tag.id, 'edit']"&ndash;&gt;
-                    &lt;!&ndash;                            class="btn btn-primary btn-sm">&ndash;&gt;
-                    &lt;!&ndash;                        <fa-icon [icon]="'pencil-alt'"></fa-icon>&ndash;&gt;
-                    &lt;!&ndash;                        <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>&ndash;&gt;
-                    &lt;!&ndash;                    </button>&ndash;&gt;
-                    <button type="submit" (click)="deleteTagFromProfile(tag)"
-                            class="btn btn-danger btn-sm">
-                        <fa-icon [icon]="'times'"></fa-icon>
-                        <span class="d-none d-md-inline">Delete tag from your profile</span>
-                    </button>
-                </div>
-            </td>
-        </tr>
-        </tbody>
-    </table>
-</div>-->
-
-<h3>User posts:</h3>
-<p></p>
-
-<div class="table-responsive" *ngIf="userPosts?.length > 0">
-    <table class="table table-striped" aria-describedby="page-heading">
-        <thead>
-        <tr>
-            <th scope="col"><span jhiTranslate="global.field.id">ID</span></th>
-            <th scope="col"><span jhiTranslate="soundgramApp.post.postContent">Post Content</span></th>
-            <th scope="col"><span jhiTranslate="soundgramApp.post.date">Date</span></th>
-            <th scope="col"><span jhiTranslate="soundgramApp.post.user">User</span></th>
-            <th scope="col"></th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr *ngFor="let post of userPosts">
-            <td><a [routerLink]="['/post', post.id, 'view' ]">{{post.id}}</a></td>
-            <td>{{post.postContent}}</td>
-            <td>{{post.date | date:'medium'}}</td>
-            <td>
-                <a [routerLink]="['/', post.user?.login, 'view']">{{post.user?.login}}</a>
-            </td>
-            <td class="text-right">
-                <div class="btn-group">
-                    <button type="submit"
-                            [routerLink]="['/post', post.id, 'view' ]"
-                            class="btn btn-info btn-sm">
-                        <fa-icon [icon]="'eye'"></fa-icon>
-                        <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
-                    </button>
-                    <button type="submit"
-                            [routerLink]="['/post', post.id, 'edit']"
-                            class="btn btn-primary btn-sm">
-                        <fa-icon [icon]="'pencil-alt'"></fa-icon>
-                        <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
-                    </button>
-                    <button type="submit" (click)="delete(post)"
-                            class="btn btn-danger btn-sm">
-                        <fa-icon [icon]="'times'"></fa-icon>
-                        <span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Delete</span>
-                    </button>
-                </div>
-            </td>
-        </tr>
-        </tbody>
-    </table>
-</div>
-
-<h3>User audio files:</h3>
-<p></p>
-
-<div class="table-responsive" *ngIf="userAudioFiles?.length > 0">
-    <table class="table table-striped" aria-describedby="page-heading">
-        <thead>
-        <tr>
-            <th scope="col"><span jhiTranslate="global.field.id">ID</span></th>
-            <th scope="col"><span jhiTranslate="soundgramApp.audioFile.audioPath">Audio Path</span></th>
-            <th scope="col"><span jhiTranslate="soundgramApp.audioFile.title">Title</span></th>
-            <th scope="col"><span jhiTranslate="soundgramApp.audioFile.iconPath">Icon Path</span></th>
-            <th scope="col"><span jhiTranslate="soundgramApp.audioFile.post">Post</span></th>
-            <th scope="col"><span jhiTranslate="soundgramApp.audioFile.user">User</span></th>
-            <th scope="col"></th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr *ngFor="let audioFile of userAudioFiles">
-            <td><a [routerLink]="['/audio-file', audioFile.id, 'view' ]">{{audioFile.id}}</a></td>
-            <td>{{audioFile.audioPath}}</td>
-            <td>{{audioFile.title}}</td>
-            <td>{{audioFile.iconPath}}</td>
-            <td>
-                <div *ngIf="audioFile.post">
-                    <a [routerLink]="['/post', audioFile.post?.id, 'view' ]">{{audioFile.post?.id}}</a>
-                </div>
-            </td>
-            <td>
-                    <span *ngFor="let user of audioFile.users; let last = last">
-                            <a [routerLink]="['/', user.login, 'view']">{{user.login}}{{last ? '' : ', '}}</a>
-                        </span>
-            </td>
-            <td class="text-right">
-                <div class="btn-group">
-                    <button type="submit"
-                            [routerLink]="['/audio-file', audioFile.id, 'view' ]"
-                            class="btn btn-info btn-sm">
-                        <fa-icon [icon]="'eye'"></fa-icon>
-                        <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
-                    </button>
-                    <button type="submit"
-                            [routerLink]="['/audio-file', audioFile.id, 'edit']"
-                            class="btn btn-primary btn-sm">
-                        <fa-icon [icon]="'pencil-alt'"></fa-icon>
-                        <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
-                    </button>
-                    <!--                    <button type="submit" (click)="delete(audioFile)"
-                                                class="btn btn-danger btn-sm">
-                                            <fa-icon [icon]="'times'"></fa-icon>
-                                            <span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Delete</span>
-                                        </button>-->
-                </div>
-            </td>
-        </tr>
-        </tbody>
-    </table>
 </div>
