--- a/src/main/webapp/app/users/user-detail/user-detail.component.html
+++ b/src/main/webapp/app/users/user-detail/user-detail.component.html
@@ -1,4 +1,86 @@
 <div class="row justify-content-center">
+    <div class="container">
+        <div class="col-md-8 profile-window">
+            <div class="row col-md-12">
+                    <img [src]="avatar"
+                         alt="Place image title"
+                         *ngIf="!isImageLoading && hasImage" class="center profile-image rounded-circle"
+                         style="max-width:120px;width:100%;max-height:120px;height:100%">
+                    <h2 class="center"><b>{{user.login}}</b></h2>
+            </div>
+            <br>
+            <dl class="row">
+                <div class="col-md-4 center">
+                    <dt><span jhiTranslate="userManagement.firstName">First Name</span></dt>
+                    <dd>{{user?.firstName}}</dd>
+                    <dt><span jhiTranslate="userManagement.lastName">Last Name</span></dt>
+                    <dd>{{user?.lastName}}</dd>
+                </div>
+                <div class="col-md-4 center">
+                    <dt><span jhiTranslate="userManagement.email">Email</span></dt>
+                    <dd>{{user?.email}}</dd>
+                    <dt><span jhiTranslate="userManagement.langKey">Lang Key</span></dt>
+                    <dd>{{user?.langKey}}</dd>
+                </div>
+                <div *ngIf="userExtra" class="col-md-4 center">
+                    <dt><span jhiTranslate="soundgramApp.userExtra.userLocation">User Location</span></dt>
+                    <dd>
+                        <span>{{userExtra.userLocation}}</span>
+                    </dd>
+                    <dt><span jhiTranslate="soundgramApp.userExtra.bio">Biography</span></dt>
+                    <dd>
+                        <span>{{userExtra.bio}}</span>
+                    </dd>
+                </div>
+            </dl>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="btn-group-vertical btn-group">
+                        <button type="button" class="btn btn-secondary"  (click)="previousState()">
+                            <fa-icon [icon]="'arrow-left'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.back">Back</span>
+                        </button>
+                        <button class="btn btn-primary" (click)="showPostsSection()">
+                            <fa-icon [icon]="'window-maximize'"></fa-icon>
+                            <span class="hidden-sm-down">Show user posts</span>
+                        </button>
+                        <button type="button" (click)="openUserFilesAtMusic()"
+                                class="btn btn-primary">
+                            <fa-icon [icon]="'music'"></fa-icon>&nbsp;<span>Play user music</span>
+                        </button>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="panel" id="result_panel">
+                        <div class="panel-heading"><h5 class="panel-title">User tags</h5>
+                        </div>
+                        <div class="panel-body">
+                            <ul class="list-group">
+                                <li class="list-group-item" *ngFor="let tag of userTags">
+                                    <a [routerLink]="['/tag', tag.id, 'view' ]">{{tag.name}}</a>&nbsp;&nbsp;
+                                    <span class="right"><fa-icon [icon]="'users'"></fa-icon>
+                                        {{tag.users.length}}</span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="row" *ngIf="showPosts">
+                    <div *ngIf="userPosts.length > 0">
+                        <div>
+                            <jhi-post-object *ngFor="let post of userPosts"
+                                             [post]="post"
+                            >
+                            </jhi-post-object>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--
+<div class="row justify-content-center">
     <div class="col-8">
         <h2>
             <span jhiTranslate="userManagement.detail.title">User</span> [<b>{{user?.login}}</b>]
@@ -33,7 +115,7 @@
                 </dd>
             </dl>
         </div>
-        <!--"../../"-->
+        &lt;!&ndash;"../../"&ndash;&gt;
         <button type="button" id="cancel-save" class="btn btn-secondary"  (click)="previousState()">
             <fa-icon [icon]="'arrow-left'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.back">Back</span>
         </button>
@@ -162,3 +244,4 @@
         </tbody>
     </table>
 </div>
+-->
