--- a/src/main/webapp/app/users/user-detail/user-detail.component.html
+++ b/src/main/webapp/app/users/user-detail/user-detail.component.html
@@ -51,7 +51,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="panel" id="result_panel">
-                        <div class="panel-heading"><h5 class="panel-title">User tags</h5>
+                        <div class="panel-heading"><h5 class="panel-title text-center">User tags</h5>
                         </div>
                         <div class="panel-body">
                             <ul class="list-group">
