--- a/src/main/webapp/app/profile/profile.component.html
+++ b/src/main/webapp/app/profile/profile.component.html
@@ -122,7 +122,7 @@
                 </div>
                 <div class="row" *ngIf="showPosts">
                     <div *ngIf="userPosts.length > 0">
-                        <div>
+                        <div infinite-scroll (scrolled)="loadPage(page + 1)" [infiniteScrollDisabled]="page >= links['last']" [infiniteScrollDistance]="0">
                             <jhi-post-object *ngFor="let post of userPosts"
                                              [post]="post"
                             >
