--- a/src/main/webapp/app/entities/post/post-detail.component.html
+++ b/src/main/webapp/app/entities/post/post-detail.component.html
@@ -102,7 +102,8 @@
                                                 jhiTranslate="entity.action.edit"> Edit</span>
                                             </button>
                                             <button type="submit" (click)="deletePost(post)"
-                                                    class="btn btn-danger btn-sm">
+                                                    class="btn btn-danger btn-sm"
+                                                    [hidden]="currentUser.login !== post.user.login">
                                                 <fa-icon [icon]="'times'"></fa-icon>
                                                 <span class="d-none d-md-inline"
                                                       jhiTranslate="entity.action.delete">Delete</span>
@@ -168,3 +169,10 @@
         </div>
     </div>
 </div>
+<!--<div class="row" *ngIf="post && currentUser">
+    <div class="col-md-8 center">
+        <jhi-post-comments #commentSection [post]="post"
+                           [currentUser]="currentUser"
+        ></jhi-post-comments>
+    </div>
+</div>-->
